Add Dinos! - Criação de ionic modal para adicionar novos dinossauros ao banco de dados - Utilização de angular fire para pushar novos dinossauros dentro de um $firebaseArray - Criação de templates e forms mais bonitos - Utilização de ion-infinite para mostrar um lindo display enquanto os dados não são carregados do firebase.

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,11 +1,12 @@
 <ion-view>
   <ion-header-bar class="bar-stable">
     <h1 class="title">Dinossaurs</h1>
+    <button class="button button-clear button-positive icon ion-ios-plus-empty" ng-click="homeCtrl.openNewDinoModal()"></button>    
   </ion-header-bar>
 
   <ion-content>
     <ion-list>
-      <ion-item collection-repeat="dinossaur in homeCtrl.dinossaurs" item-width="100%">
+      <ion-item collection-repeat="dinossaur in homeCtrl.dinossaurs | orderBy: 'nome'" item-width="100%">
         <strong>{{dinossaur.nome}}</strong><br>
         <label>Altura: {{dinossaur.altura}}m</label><br>
         <label>Comprimento: {{dinossaur.comprimento}}m</label>        
